--- a/index.html
+++ b/index.html
@@ -410,10 +410,13 @@
         <h2 class="shop-heading">Наши изделия</h2>
         <div class="products">
             <article class="product">
-                <div class="product-imgbox">
+                <picture class="product-imgbox">
+                    <source srcset="images/shop-item-desk1.jpg" media="(min-width: 1200px)">
+                    <source srcset="images/shop-item-tablet1.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                    <source srcset="images/shop-item-mobile1.jpg" media="(max-width: 640px)">
                     <img class="product-img" src="images/shop-item-desk1.jpg"
                         alt="Розовая подушка с принтом на белом кресле">
-                </div>
+                </picture>
                 <div class="product-body">
                     <div class="product-content">
                         <h3 class="product-title">Подушки на диван</h3>
@@ -440,9 +443,12 @@
                 </div>
             </article>
             <article class="product">
-                <div class="product-imgbox">
+                <picture class="product-imgbox">
+                    <source srcset="images/shop-item-desk2.jpg" media="(min-width: 1200px)">
+                    <source srcset="images/shop-item-tablet2.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                    <source srcset="images/shop-item-mobile2.jpg" media="(max-width: 640px)">
                     <img class="product-img" src="images/shop-item-desk2.jpg" alt="Рукодельная кукла Зайчик">
-                </div>
+                </picture>
                 <div class="product-body">
                     <div class="product-content">
                         <h3 class="product-title">Кукла "Зайчик"</h3>
@@ -469,9 +475,12 @@
                 </div>
             </article>
             <article class="product">
-                <div class="product-imgbox">
+                <picture class="product-imgbox">
+                    <source srcset="images/shop-item-desk3.jpg" media="(min-width: 1200px)">
+                    <source srcset="images/shop-item-tablet3.jpg" media="(min-width: 641px) and (max-width: 1199px)">
+                    <source srcset="images/shop-item-mobile3.jpg" media="(max-width: 640px)">
                     <img class="product-img" src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
-                </div>
+                </picture>
                 <div class="product-body">
                     <div class="product-content">
                         <h3 class="product-title">Шестиугольная рамка</h3>
